Small changes to align and fix css merges, Started Home page

--- a/sdgp-roamceylon/src/Components/LoginPage/LoginPage.css
+++ b/sdgp-roamceylon/src/Components/LoginPage/LoginPage.css
@@ -7,8 +7,9 @@
     box-sizing: border-box;
 }
 
-body{
+body .login-page{
     background-color: #04364A;
+    text-align: left;
 }
 
 .login-box{
@@ -144,7 +145,7 @@ body{
     text-decoration: underline;
 }
 
-.header{
+.login-page .header{
     font-size: 15px;
     color: #DAFFFB;
     margin: 20px 0px 0px 20px;
